# rusty-kongming

./: .gitignore
bot/: .env.example  Cargo.toml  README.md  Slot.toml
bot/crates/artemis-core/: Cargo.toml
bot/crates/artemis-core/src/: engine.rs  types.rs
bot/crates/runtime/: Cargo.toml
bot/crates/runtime/src/: constants.rs  dynamic_config.rs  lib.rs
bot/crates/strategy/: Cargo.toml  Slot.toml
bot/crates/strategy/src/: constants.rs  helpers.rs  lib.rs  types.rs
bot/crates/strategy/tests/: main.rs
bot/op-sidecar/: Cargo.toml
bot/op-sidecar/src/: main.rs
bot/op-sidecar/src/echo/: mod.rs  tcp_client.rs  tcp_server.rs
bot/sando-bin/: Cargo.toml
bot/sando-bin/src/: config.rs  initialization.rs  main.rs
bot/src/forked_db/: fork_db.rs
bot/src/runner/: bundle_sender.rs  mod.rs
bot/src/simulate/: helpers.rs  make_sandwich.rs  mod.rs  sandwich_test.rs
bot/src/simulate/sandwich/: cook_simple_forward.rs  cook_simple_reverse.rs  mod.rs  sandwich_cook_keeper.rs  (+3 more)
bot/src/utils/: alert.rs  constants.rs  dotenv.rs
cli/: .env.example  README  deploySandwich.js  forknode.sh  package-lock.json  recoverEth.js  recoverWeth.js  seppuku.js
contract/: README.md
contract/script/: DeployCPO.s.sol
contract/src/: BrainDance.sol  sando.huff  sandwich.huff  sandwichv2.huff
contract/test/: Sando.t.sol  Sandwich.t.sol  fork.sh
contract/test/helpers/: SandwichHelper.sol
contract/test/misc/: SandoCommon.sol  V2SandoUtility.sol  V3SandoUtility.sol
node-test/: deploySandwich.js  index.js  package.json  recoverWeth.js  seppuku.js
node-test/abi/: IWETH.json
(+22 files in other folders)
