[package]
name = "op-sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.0", features = ["full"] }
serde = "1.0.145"
serde_json = "1.0.86"
anyhow = "1.0.70"
docopt = "1.1.1"

# Logging
colored = "2.0.0"
log = "0.4.17"
indicatif = "0.17.5"